--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -85,6 +85,9 @@
         border-bottom: 1px solid #e1e1e1;
         overflow: hidden;
     }
+    .xui-productReviewListPage .xui-shopReply > p:first-child:before{
+        content: '商家留言：'
+    }
     .xui-productReviewListPage .xui-btnWrapper{
         position: relative;
     }
@@ -147,7 +150,6 @@
         </div>
         {% if review.shop_reply %}
         <div class="pb10 xui-shopReply mb10 xa-shopReply">
-            <span class="em9 c65 fl">商家留言：</span>
             {{review.shop_reply|safe}}
         </div>
         {% endif %}
@@ -172,7 +174,6 @@
             {% else %}
                 <img src="{{picture_url}}">
             {% endif %}
-
             {% endfor %}
         </div>
         {% endif %}
@@ -215,7 +216,7 @@
         });
 
         $('.xa-shopReply').find('p').addClass('em9').addClass('c65');
-        $('.xa-shopReply').find('p img').addClass('vt');
+        $('.xa-shopReply').find('p img').addClass('vm');
     });
 </script>
 {% endblock %}
