--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -63,6 +63,20 @@
                     </li>
                 </ul>
             </div>
+            <div class="wui-i-states-weshop" style="display: none">
+                <ul class="wui-i-weshop">
+                    <li class="active">TOP100</li>
+                    <li>我的好友</li>
+                </ul>
+                <div style="clear: both"></div>
+                <ul class="wa-top100">
+                    <li class="wui-i-top100-title" style="padding: 16px 10px 0;">
+                        <span style="margin-left: 5px">排名</span>
+                        <span style="margin-left: 18px">会员</span>
+                        <span class="fr">助力值</span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 {% endifequal %}
