--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -63,6 +63,45 @@
                     </li>
                 </ul>
             </div>
+            <div class="wui-i-states-weshop" style="display: none">
+                 <div class="wui-i-rules xa-rules">
+                    <div class="wui-i-title">
+                        <span class="wui-i-rules-title-content">
+                            <i class="wui-i-star"></i><b>助力详情</b><i class="wui-i-star"></i>
+                        </span>
+                    </div>
+                </div>
+                <ul class="wui-i-weshop wa-weshop">
+                    <li class="active weshop-top100">TOP100</li>
+                    <li class="weshop-friends">我的好友</li>
+                </ul>
+                <div style="clear: both"></div>
+                <ul class="wa-top100">
+                    <li class="wui-i-top100-title" style="padding: 16px 10px 0;">
+                        <span style="margin-left: 5px">排名</span>
+                        <span style="margin-left: 18px">会员</span>
+                        <span class="fr">助力值</span>
+                    </li>
+                </ul>
+                <div class="wa-friends" style="display: none">
+                    <div class="wui-i-rules xa-rules">
+                        <div class="wui-i-title">
+                            <span class="wui-i-rules-title-content">
+                                <span class="wui-i-radius"><span></span></span><b>默默支持的</b><span class="wui-i-radius"><span></span></span>
+                            </span>
+                            <ul class="follow_friends"></ul>
+                        </div>
+                    </div>
+                    <div class="wui-i-rules xa-rules">
+                        <div class="wui-i-title">
+                            <span class="wui-i-rules-title-content">
+                                <span class="wui-i-radius"><span></span></span><b>偷偷逃跑的</b><span class="wui-i-radius"><span></span></span>
+                            </span>
+                            <ul class="unfollow_friends"></ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endifequal %}
