专项抽奖优化

--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -58,6 +58,10 @@
         .xui-workbench-rightPanel{
             max-width:572px; 
         }
+
+        textarea[data-field = 'share_description']{
+            height: 40px!important;
+        }
     </style>
 {% endblock %}
 
