--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -85,6 +85,9 @@
         border-bottom: 1px solid #e1e1e1;
         overflow: hidden;
     }
+    .xui-productReviewListPage .xui-productReviewText{
+        line-height: 16px;
+    }
     .xui-productReviewListPage .xui-btnWrapper{
         position: relative;
     }
