--- a/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/webapp/m_my_evaluates.html
@@ -85,6 +85,12 @@
         border-bottom: 1px solid #e1e1e1;
         overflow: hidden;
     }
+    .xui-productReviewListPage .xui-shopReply span{
+        line-height: 20px;
+    }
+    .xui-productReviewListPage .xui-shopReply p{
+        line-height: 20px;
+    }
     .xui-productReviewListPage .xui-productReviewText{
         line-height: 16px;
     }
