--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery.html
@@ -396,6 +396,10 @@
                     showQrcode(W.qrcodeUrl);
                     return false;
                 }
+                if(!is_member_self){
+                    wuiAlert('请使用抽奖码进行抽奖');
+                    return false;
+                }
                 var _that = this;
                 $(this).addClass('xa-lottery-go-to');
                 window.setTimeout(function(){
@@ -484,6 +488,8 @@
         function renderDynamicData(member_info){
             exlottery_status = member_info.exlottery_status;
             activity_status = member_info.activity_status;
+            is_member_self = member_info.is_member_self;
+            console.log(is_member_self);
             W.isMember = member_info.isMember;
             //可参与次数
             can_play_count = member_info.can_play_count;
