--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -193,6 +193,12 @@
             <div style="display: inline-block;color: #333;width: 75%;"><p>成功帮<span class="wa-pageownername"></span>助力值+1</p><p>关系好就是任性！</p></div>
         </div>
     </div>
+    <div class="xui-powerLimit none">
+        <div class="f15 xui-successHint xui-spritebg">
+            <div class="xui-spritebg xui-successHint-img"></div>
+            <div style="display: inline-block;color: #333;width: 75%;"><p>您已帮<span class="wa-poweredname"></span>助力过该活动</p></div>
+        </div>
+    </div>
     <!-- 非会员引导 -->
     <div class="xui-attention xa-attention-guest none">
         <div class="xui-twoDimensionBox">
@@ -282,7 +288,10 @@
             if(W.isMember){
                 if (username == 'jobs'){
                     if (has_power){
-                        $powerBtn.html('<span class="wa-power-btn-action">您已助力过该活动</span>')
+                        $powerBtn.html('您已助力过该活动');
+                        $powerBtn.on('click', function(){
+                                openGuideMask();
+                            }).show();
                     }else {
                         if(is_powered){
                             $powerBtn.find('.wa-power-btn-action').html('已帮');
@@ -517,6 +526,10 @@
         mask('show');
         $('.xui-powerSucceed').removeClass('none');
     }
+    function openLimitWin(){
+        mask('show');
+        $('.xui-powerLimit').removeClass('none');
+    }
     function openGuestMask(){
         mask('show');
         $('.xa-attention-guest').removeClass('none');
@@ -547,14 +560,20 @@
                 fid: page_owner_member_id
             },
             success: function(data) {
-                if (W.isMember) {
-                    $('.wa-power').find('.wa-power-btn-action').html('已帮');
-                    openSuccessWin();
+                if (username == 'jobs' && data.hasOwnProperty('powered_member_name')){
+                    $('.wa-poweredname').html(data.powered_member_name);
+                    openLimitWin();
+                    $('.wa-power').html('您已助力过该活动');
                 }else{
-                    $attention.find('.xa-attention-tip').show();
-                    $attention.find('img').attr('src', new_qrcode_url);
-                    $attention.find('.xa-attention-reply').children().first().html("3.回复：");
-                    openGuestMask();
+                    if (W.isMember) {
+                        $('.wa-power').find('.wa-power-btn-action').html('已帮');
+                        openSuccessWin();
+                    }else{
+                        $attention.find('.xa-attention-tip').show();
+                        $attention.find('img').attr('src', new_qrcode_url);
+                        $attention.find('.xa-attention-reply').children().first().html("3.回复：");
+                        openGuestMask();
+                    }
                 }
             },
             error: function(data) {
@@ -583,6 +602,7 @@
         $('.xui-attention').addClass('none');
         $('.xa-share').addClass('none');
         $('.xui-errMsg').addClass('none');
+        $('.xui-powerLimit').addClass('none');
     });
     $('.xa-closeBtn').click(function(){
         $('.xui-attention').addClass('none');
