--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -64,9 +64,9 @@
                 </ul>
             </div>
             <div class="wui-i-states-weshop" style="display: none">
-                <ul class="wui-i-weshop">
-                    <li class="active">TOP100</li>
-                    <li>我的好友</li>
+                <ul class="wui-i-weshop wa-weshop">
+                    <li class="active weshop-top100">TOP100</li>
+                    <li class="weshop-friends">我的好友</li>
                 </ul>
                 <div style="clear: both"></div>
                 <ul class="wa-top100">
@@ -76,6 +76,24 @@
                         <span class="fr">助力值</span>
                     </li>
                 </ul>
+                <div class="wa-friends" style="display: none">
+                    <div class="wui-i-rules xa-rules">
+                        <div class="wui-i-title">
+                            <span class="wui-i-rules-title-content">
+                                <span class="wui-i-radius"><span></span></span><b>默默支持的</b><span class="wui-i-radius"><span></span></span>
+                            </span>
+                            <ul class="follow_friends"></ul>
+                        </div>
+                    </div>
+                    <div class="wui-i-rules xa-rules">
+                        <div class="wui-i-title">
+                            <span class="wui-i-rules-title-content">
+                                <span class="wui-i-radius"><span></span></span><b>偷偷逃跑的</b><span class="wui-i-radius"><span></span></span>
+                            </span>
+                            <ul class="unfollow_friends"></ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
