--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -1207,6 +1207,35 @@ p.wui-i-start_time,p.wui-i-end_time{
 	border-bottom: 1px dotted #cac8b0;
 }
 
+.wui-powerme-container.yellow .wa-friends .wui-i-radius{
+	width: 22px;
+	display: inline-block
+}
+.wui-powerme-container.yellow .wa-friends .wui-i-radius span{
+    width: 6px;
+	height: 6px;
+	display: inline-block;
+	background: #C75C28;
+	border-radius:3px
+}
+.wui-weshop-friend-name{
+	text-align: center;
+}
+.wui-weshop-friend-name .wui-weshop-wraper{
+	display: inline-block;
+	background: white none repeat scroll 0 0;
+	border-radius: 100%;
+	width: 45px;
+	height: 45px;
+}
+.wui-weshop-friend-name img{
+	border-radius: 80px;
+	left: 13px;
+	position: absolute;
+	top: 2px;
+	width: 41px;
+}
+
 /* 百宝箱 vote new style ---start*/
 div, span, a, ul, li{ /*防止ios点击闪屏*/
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
